Update books Summary knowledge.json

--- a/books Summary knowledge.json
+++ b/books Summary knowledge.json
@@ -1,1 +1,42 @@
-
+[
+  {
+    "title": "अध्याय 1 : पहाड़ कौन है?",
+    "author": "Brianna Wiest",
+    "summary": "लेखिका बताती हैं कि जीवन का सबसे बड़ा पहाड़ दुनिया नहीं बल्कि हमारा अपना मन है। मन में छिपे डर, संदेह, आलस और टालमटोल ही असली बाधाएँ हैं। विवेकानन्द कहते थे कि बाहरी बाधाएँ कुछ नहीं, मन ही सबसे बड़ा शत्रु और मित्र है। विद्यार्थी का ध्यान भटकना भी उसी पहाड़ का रूप है। आइंस्टीन भी शुरुआती जीवन में इसी मानसिक पहाड़ से लड़े। यह अध्याय सिखाता है कि असली लड़ाई बाहर नहीं, भीतर होती है।"
+  },
+  {
+    "title": "अध्याय 2 : स्वयं को नुकसान पहुँचाने की आदत",
+    "author": "Brianna Wiest",
+    "summary": "मनुष्य कई बार खुद को ही रोक लेता है। गांधीजी कहते थे कि मनुष्य की कमजोरी यह है कि वह सच जानता है पर उसका पालन नहीं करता। विद्यार्थी पढ़ना चाहता है पर अचानक मन बदल जाता है—यह डर है, परिवर्तन का डर। अब्दुल कलाम भी बचपन में विज्ञान की किताबों से डरते थे, पर उन्होंने उसी डर को शक्ति में बदल दिया। अध्याय बताता है कि बदलाव का डर कमजोरी नहीं, भविष्य का संकेत है।"
+  },
+  {
+    "title": "अध्याय 3 : भावनाओं को समझना",
+    "author": "Brianna Wiest",
+    "summary": "भावनाएँ हमें गिराने नहीं, उठाने आती हैं। भय बताता है कि हम नई दिशा में जा रहे हैं, ईर्ष्या छिपे सपनों का संकेत देती है, अपराधबोध दिखाता है कि हमारा विवेक जीवित है। टैगोर भी बचपन में डर के कारण मंच पर रुक–रुक कर कविता पढ़ते थे, पर उसी डर ने उन्हें महान साहित्यकार बनाया। भावनाओं को दबाने से वे विद्रोही बनती हैं, समझने से मार्गदर्शक।"
+  },
+  {
+    "title": "अध्याय 4 : पुराने घावों की मरम्मत",
+    "author": "Brianna Wiest",
+    "summary": "हमारे भीतर कई पुराने घाव छिपे रहते हैं—असफलता, तिरस्कार, बचपन की पीड़ा। लिंकन भी असफलताओं से भरे जीवन में आगे बढ़े। अध्याय बताता है कि healing का मतलब अतीत को भूलना नहीं, बल्कि उसके अर्थ को बदलना है। विद्यार्थी यदि पुरानी असफल परीक्षा को अपनी पहचान बना लेता है, तो वह बढ़ नहीं पाएगा। वही असफलता सुधार का आधार बन जाए तो वही उसकी ताकत बनती है।"
+  },
+  {
+    "title": "अध्याय 5 : परिवर्तन का विरोध",
+    "author": "Brianna Wiest",
+    "summary": "जब मनुष्य बदलना चाहता है, मन ही सबसे बड़ा विरोध करता है। बुद्ध ने भी ज्ञान प्राप्ति से पहले अपने मन से युद्ध किया। विद्यार्थी पढ़ाई शुरू करता है तो बेचैनी, आलस, थकान—यही विरोध सामने आता है। यह विरोध साबित करता है कि परिवर्तन शुरू हो चुका है। परिवर्तन को छोटे कदमों से अपनाना चाहिए—थोड़ा पढ़ना, थोड़ी योजना, थोड़ी अनुशासन।"
+  },
+  {
+    "title": "अध्याय 6 : पहचान में परिवर्तन",
+    "author": "Brianna Wiest",
+    "summary": "आदतें तभी बदलती हैं जब पहचान बदलती है। भगत सिंह तब क्रांतिकारी बने जब मन ने स्वयं को उसी उद्देश्य के लिए समर्पित माना। अब्दुल कलाम तब वैज्ञानिक बने जब उन्होंने स्वयं को वैज्ञानिक माना। विद्यार्थी यदि स्वयं को कमजोर समझेगा तो मन उसे वहीं लौटाएगा। पर जब वह स्वयं को मेहनती और योग्य मानेगा, क्रियाएँ भी वैसी ही हो जाएँगी। पहचान ही सफलता की जड़ है।"
+  },
+  {
+    "title": "अध्याय 7 : स्वयं को नए रूप में गढ़ना",
+    "author": "Brianna Wiest",
+    "summary": "मनुष्य अपने भविष्य का वास्तुकार स्वयं है। वह नई आदतें बनाकर, पुरानी सीमाएँ तोड़कर, छोटी–छोटी जीतें इकट्ठी कर आगे बढ़ता है। नेपोलियन कहते थे—जीत उसी की होती है जिसकी आत्मा हार नहीं मानती। विद्यार्थी जब 10 मिनट पढ़ने जैसी छोटी सफलताओं को स्वीकार करता है, मन एक प्रशिक्षित योद्धा की तरह मजबूत होने लगता है।"
+  },
+  {
+    "title": "अध्याय 8 : शिखर पर पहुँचना",
+    "author": "Brianna Wiest",
+    "summary": "जीवन का असली शिखर भीतर होता है। जब मनुष्य अपने अंदर के पहाड़ को जीत लेता है, बाहरी चुनौतियाँ छोटी लगने लगती हैं। ऐसा व्यक्ति सिद्धांतों पर चलता है, असफलता से नहीं डरता, distractions उसे हिला नहीं पाते। विवेकानन्द की तरह वह आत्मविश्वास से दुनिया के सामने खड़ा होता है। पहाड़ जीतने का अर्थ दूसरों को नहीं, खुद को हराना है।"
+  }
+]
